[gd_scene load_steps=9 format=2]

[ext_resource path="res://Projectile/fire/Flamethrower/white_square.png" type="Texture" id=1]
[ext_resource path="res://Projectile/fire/FlameTrail/floor_fire.gd" type="Script" id=2]
[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.2143, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 14 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.664516, 0.683871, 0.987097, 1 )
colors = PoolColorArray( 1, 1, 0.317647, 1, 0.921569, 0, 0, 0.196078, 1, 0.356863, 0, 0.607843, 0.936298, 0.106818, 0.0618865, 0.783412, 0.815686, 0.156863, 0.156863, 0.301961 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 40.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( -100, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
angular_velocity = 5.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 0.2
radial_accel = 50.0
radial_accel_random = 1.0
damping = 11.58
damping_random = 1.0
angle = 90.0
angle_random = 1.0
scale = 0.1
scale_random = 0.39
color_ramp = SubResource( 5 )

[node name="RigidBody2D" type="RigidBody2D"]
z_index = 3
collision_layer = 0
collision_mask = 256
mass = 1020.41
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9, 1 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -18, 0 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 1 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.3
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.125, 0.125 )
amount = 30
lifetime = 2.3
speed_scale = 2.5
explosiveness = 0.14
randomness = 1.0
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 7, 7 )
texture = ExtResource( 3 )
color = Color( 1, 0.101961, 0, 1 )
energy = 0.25

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
